button center align fixed

--- a/Assignment 1/style.css
+++ b/Assignment 1/style.css
@@ -15,8 +15,8 @@ button
 {
     border: none;
     background-color: transparent;
-    width: 30px;
-    height: 30px;
+    width: 10px;
+    height: 10px;
 }
 
 button:active
